// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Snapshot Testing Plp getInitialProps 1`] = `undefined`;

exports[`With Snapshot Testing Plp page shows "mf.swhurl.com" H1 1`] = `
<DocumentFragment>
  .c2 {
  color: black;
  padding-right: 5px;
}

.c2:hover {
  color: #f00;
}

.c2:visited {
  color: black;
}

.c1 {
  font-weight: bold;
  text-transform: capitalize;
  padding-right: 10px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.c3 {
  width: 100%;
  text-align: center;
  text-transform: capitalize;
  margin-bottom: 0px;
  background-color: #eee;
}

.c4 {
  width: 100%;
}

.c5 {
  width: 100%;
  float: left;
}

.c6 {
  width: 100%;
  margin: 0 auto;
}

.c7 {
  text-align: center;
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .c4 {
    display: inline-block;
    text-align: center;
  }
}

@media only screen and (min-width:641px) {
  .c5 {
    width: 44%;
    display: inline-block;
    padding: 10px 3% 0 3%;
  }
}

@media only screen and (max-width:320px) {
  .c6 {
    max-width: 320px;
  }
}

@media only screen and (min-width:641px) {
  .c8 {
    width: 50%;
    display: inline-block;
  }
}

<div>
    <nav
      class="c0"
    >
      <div
        class="c1"
      >
        mens
      </div>
      <a
        class="c2"
        href="/mens/shop/accessories"
      >
        Accessories
      </a>
      <a
        class="c2"
        href="/mens/shop/shoes"
      >
        Shoes
      </a>
      <a
        class="c2"
        href="/mens/shop/clothing"
      >
        Clothing
      </a>
      <a
        class="c2"
        href="/mens/shop/bags"
      >
        Bags
      </a>
      <a
        class="c2"
        href="/mens/shop/homeware"
      >
        Homeware
      </a>
    </nav>
    <nav
      class="c0"
    >
      <div
        class="c1"
      >
        womens
      </div>
      <a
        class="c2"
        href="/womens/shop/accessories"
      >
        Accessories
      </a>
      <a
        class="c2"
        href="/womens/shop/bags"
      >
        Bags
      </a>
      <a
        class="c2"
        href="/womens/shop/clothing"
      >
        Clothing
      </a>
      <a
        class="c2"
        href="/womens/shop/shoes"
      >
        Shoes
      </a>
      <a
        class="c2"
        href="/womens/shop/homeware"
      >
        Homeware
      </a>
    </nav>
    <h1
      class="c3"
    >
      Womens
    </h1>
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="react-swipe-container carousel"
          style="overflow: hidden; visibility: visible; position: relative;"
        >
          <div
            style="overflow: hidden; position: relative; width: 0px;"
          >
            <div
              data-index="0"
              style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
            >
              <img
                alt="Intrecciato leather cardholder"
                class="c6"
                src="//assetsprx.matchesfashion.com/img/product/1247661_1_large.jpg"
              />
            </div>
            <div
              data-index="1"
              style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
            >
              <img
                alt="Intrecciato leather cardholder"
                class="c6"
                src="//assetsprx.matchesfashion.com/img/product/1247661_2_large.jpg"
              />
            </div>
            <div
              data-index="2"
              style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
            >
              <img
                alt="Intrecciato leather cardholder"
                class="c6"
                src="//assetsprx.matchesfashion.com/img/product/1247661_3_large.jpg"
              />
            </div>
            <div
              data-index="3"
              style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
            >
              <img
                alt="Intrecciato leather cardholder"
                class="c6"
                src="//assetsprx.matchesfashion.com/img/product/1247661_4_large.jpg"
              />
            </div>
            <div
              data-index="4"
              style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
            >
              <img
                alt="Intrecciato leather cardholder"
                class="c6"
                src="//assetsprx.matchesfashion.com/img/product/1247661_5_large.jpg"
              />
            </div>
          </div>
        </div>
        <noscript />
        <div
          class="c7"
        >
          <button>
            Previous
          </button>
          <button>
            Next
          </button>
        </div>
      </div>
      <div
        class="c8"
      >
        <h2>
          Bottega Veneta
        </h2>
        <h3>
          Intrecciato leather cardholder
        </h3>
        <p>
          £265
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`With Snapshot Testing Plp page shows "mf.swhurl.com" H1 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -96,11 +96,11 @@
            <div
              style=\\"overflow: hidden; position: relative; width: 0px;\\"
            >
              <div
                data-index=\\"0\\"
-               style=\\"float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);\\"
+               style=\\"float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 300ms; webkit-transition-duration: 300ms; webkit-transform: translate(NaNpx,0)translateZ(0);\\"
              >
                <img
                  alt=\\"Intrecciato leather cardholder\\"
                  class=\\"sc-AxheI hqoFNX\\"
                  src=\\"//assetsprx.matchesfashion.com/img/product/1247661_1_large.jpg\\""
`;

exports[`With Snapshot Testing Plp page shows "mf.swhurl.com" H1 3`] = `
Object {
  Symbol(SameObject caches): Object {
    "childNodes": NodeList [
      <div>
        <nav
          class="sc-AxiKw kObvJP"
        >
          <div
            class="sc-AxirZ itgfYF"
          >
            mens
          </div>
          <a
            class="sc-AxjAm ewpPYA"
            href="/mens/shop/accessories"
          >
            Accessories
          </a>
          <a
            class="sc-AxjAm ewpPYA"
            href="/mens/shop/shoes"
          >
            Shoes
          </a>
          <a
            class="sc-AxjAm ewpPYA"
            href="/mens/shop/clothing"
          >
            Clothing
          </a>
          <a
            class="sc-AxjAm ewpPYA"
            href="/mens/shop/bags"
          >
            Bags
          </a>
          <a
            class="sc-AxjAm ewpPYA"
            href="/mens/shop/homeware"
          >
            Homeware
          </a>
        </nav>
        <nav
          class="sc-AxiKw kObvJP"
        >
          <div
            class="sc-AxirZ itgfYF"
          >
            womens
          </div>
          <a
            class="sc-AxjAm ewpPYA"
            href="/womens/shop/accessories"
          >
            Accessories
          </a>
          <a
            class="sc-AxjAm ewpPYA"
            href="/womens/shop/bags"
          >
            Bags
          </a>
          <a
            class="sc-AxjAm ewpPYA"
            href="/womens/shop/clothing"
          >
            Clothing
          </a>
          <a
            class="sc-AxjAm ewpPYA"
            href="/womens/shop/shoes"
          >
            Shoes
          </a>
          <a
            class="sc-AxjAm ewpPYA"
            href="/womens/shop/homeware"
          >
            Homeware
          </a>
        </nav>
        <h1
          class="sc-AxhCb gJUsOj"
        >
          Womens
        </h1>
        <div
          class="sc-AxhUy fdtiAp"
        >
          <div
            class="sc-AxgMl gUSXoB"
          >
            <div
              class="react-swipe-container carousel"
              style="overflow: hidden; visibility: visible; position: relative;"
            >
              <div
                style="overflow: hidden; position: relative; width: 0px;"
              >
                <div
                  data-index="0"
                  style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
                >
                  <img
                    alt="Intrecciato leather cardholder"
                    class="sc-AxheI hqoFNX"
                    src="//assetsprx.matchesfashion.com/img/product/1247661_1_large.jpg"
                  />
                </div>
                <div
                  data-index="1"
                  style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
                >
                  <img
                    alt="Intrecciato leather cardholder"
                    class="sc-AxheI hqoFNX"
                    src="//assetsprx.matchesfashion.com/img/product/1247661_2_large.jpg"
                  />
                </div>
                <div
                  data-index="2"
                  style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
                >
                  <img
                    alt="Intrecciato leather cardholder"
                    class="sc-AxheI hqoFNX"
                    src="//assetsprx.matchesfashion.com/img/product/1247661_3_large.jpg"
                  />
                </div>
                <div
                  data-index="3"
                  style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
                >
                  <img
                    alt="Intrecciato leather cardholder"
                    class="sc-AxheI hqoFNX"
                    src="//assetsprx.matchesfashion.com/img/product/1247661_4_large.jpg"
                  />
                </div>
                <div
                  data-index="4"
                  style="float: left; width: 0px; position: relative; transition-property: transform; left: 0px; transition-duration: 0ms; webkit-transition-duration: 0ms; webkit-transform: translate(0px,0)translateZ(0);"
                >
                  <img
                    alt="Intrecciato leather cardholder"
                    class="sc-AxheI hqoFNX"
                    src="//assetsprx.matchesfashion.com/img/product/1247661_5_large.jpg"
                  />
                </div>
              </div>
            </div>
            <noscript />
            <div
              class="sc-AxmLO hkUbGf"
            >
              <button>
                Previous
              </button>
              <button>
                Next
              </button>
            </div>
          </div>
          <div
            class="sc-Axmtr bDQAir"
          >
            <h2>
              Bottega Veneta
            </h2>
            <h3>
              Intrecciato leather cardholder
            </h3>
            <p>
              £265
            </p>
          </div>
        </div>
      </div>,
    ],
  },
}
`;
